[tool.poetry]
name = "musical-notes"
version = "0.1.0"
description = ""
authors = ["Jerry Augusto <47633560+jerryaugusto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
