[tool.poetry]
name = "musical-notes"
version = "0.1.0"
description = ""
authors = ["Jerry Augusto <47633560+jerryaugusto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
ruff = "^0.4.5"
taskipy = "^1.12.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.24"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
